--- a/src/html/cadastro.html
+++ b/src/html/cadastro.html
@@ -30,6 +30,14 @@
         <div class="card-login"> <!--(CARD)-->
             <h1>CADASTRO</h1>
             <div class="textfield"> <!--div para englobar a label e o input-->
+                <label for="usuario">Nome Completo</label>
+                <input type="text" name="usuario" placeholder="Nome"><!--div para receber o nome do usuario -->
+            </div>
+            <div class="textfield"> 
+                <label for="usuario">E-mail</label>
+                <input type="email" name="usuario" placeholder="e-mail">
+            </div>
+            <div class="textfield"> 
                 <label for="usuario">Usuário</label>
                 <input type="text" name="usuario" placeholder="Usuário"><!--div para receber o nome do usuario -->
             </div>
@@ -41,7 +49,7 @@
                 <label for="senha">Confirme sua senha</label>
                 <input type="password" name="senha" placeholder="Senha">
             </div>
-            <button class="btn-login">CADASTRAR</button>
+            <button class="btn-login btn">CADASTRAR</button>
         </div>
     </div>       
 </body>
