--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,20 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<<<<<<< HEAD
     <title>Jogo da Forca</title>
-=======
     <title>JOGO DA FORCA</title>
     <link rel="shortcut icon" href="../imagens/favicon.png" type="image/x-icon">
->>>>>>> c441b8be0095606f07ed72c4d9ae0962b97c74e8
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/src/css/cabecalho.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<<<<<<< HEAD
-=======
     <link rel="stylesheet" href="/src/css/paginainicial.css">
->>>>>>> c441b8be0095606f07ed72c4d9ae0962b97c74e8
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -31,17 +25,14 @@
             <a class="navbar-link" href="#">CONTATO</a>
         </div>
     </nav>
-<<<<<<< HEAD
-=======
     <main>
       <div id="container-titulo">
         <h1 id="titulo">JOGO DA FORCA</h1>
       </div>
     <div class="container-principal">
       <a href="#" id="botao-jogar">JOGUE GRÁTIS AGORA</a>
-    <<div>
+    <div>
     </main>
->>>>>>> c441b8be0095606f07ed72c4d9ae0962b97c74e8
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
