--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="/src/css/cabecalho.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="/src/css/error404.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/contato.css">
   </head>
   <body>
     <nav class="container-nav">
@@ -25,9 +25,27 @@
         </div>
     </nav>
     <main>
-        <h1 id="titulo">ERRO 404</h1>
-        <p id="mensagem">OCORREU UM ERRO INESPERADO!</p>
-        <a href="/src/html/index.html" id="link-voltar">VOLTAR</a>
+      <div id="sobre-nos">
+        <h1 id="titulo">sobre a AMDY</h1>
+        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima ipsum fugit placeat aperiam odio officiis laudantium nihil a, iusto nam recusandae, molestias explicabo voluptas voluptate ea debitis, maxime incidunt dignissimos.</p>
+      </div>
+      <div>
+        <h2 id="contatos">Contatos</h2>
+        <ul>
+          <li class="desenvolvedores">Alisson Amegle</li>
+          <p>Desenvolvedor Back-end</p>
+          <a href="">Linkedin</a>
+          <li class="desenvolvedores">Mateus Duarte</li>
+          <p>Desenvolvedor Front-end</p>
+          <a href="">Linkedin</a>
+          <li class="desenvolvedores">Davi Oliveira</li>
+          <p>Desenvolvedor Front-end</p>
+          <a href="">Linkedin</a>
+          <li class="desenvolvedores">Yasmin Kibaltchich</li>
+          <p>Desenvovedora Back-end</p>
+          <a href="">Linkedin</a>
+        </ul>
+      </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
