--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,10 +19,10 @@
             <a class="navbar-button" href="#">LOGIN</a>
         </div>
         <div class="navbar-more">
-            <a class="navbar-link" href="#">PAGINA INICIAL</a>
+            <a class="navbar-link" href="/src/html/index.html">PAGINA INICIAL</a>
             <a class="navbar-link" href="#">CLASSIFICAÇÃO</a>
             <a class="navbar-link" href="#">INFORMAÇÕES PESSOAIS</a>
-            <a class="navbar-link" href="#">CONTATO</a>
+            <a class="navbar-link" href="/src/html/contato.html">CONTATO</a>
         </div>
     </nav>
     <main>
