--- a/src/html/play.html
+++ b/src/html/play.html
@@ -3,15 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JOGO DA FORCA - ERRO 404</title>
+    <title>JOGO DA FORCA - JOGAR</title>
     <link rel="shortcut icon" href="../imagens/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/src/css/cabecalho.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="/src/css/error404.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  </head>
+    <style>
+        body{
+            background-image: url(../imagens/fundo-espaco.jpg);
+            background-size: 100%;
+        }
+        #container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #jogo{
+            background-color: white;
+            width: 820px;
+            height: 620px;
+        }
+    </style>
+</head>
   <body>
     <nav class="container-nav">
         <div class="navbar-play">
@@ -25,9 +40,13 @@
         </div>
     </nav>
     <main>
-        <h1 id="titulo">ERRO 404</h1>
-        <p id="mensagem">OCORREU UM ERRO INESPERADO!</p>
-        <a href="/src/html/index.html" id="link-voltar">VOLTAR</a>
+        <div id="titulo">
+            <h1 style="text-align: center; padding-top: 0.3em; color: var(--branco); font-weight: 700;">JOGO DA FORCA</h1>
+        </div>
+        <div id="container">
+            <div id="jogo">
+            </div>
+        </div> 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
