telas de info, e alteração de cadastro

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -15,7 +15,7 @@
             <a class="navbar-button" href="#">LOGIN</a>
         </div>
         <div class="navbar-more">
-            <a class="navbar-link" href="#">PAGINA INICIAL</a>
+            <a class="navbar-link" href="../html/index.html">PAGINA INICIAL</a>
             <a class="navbar-link" href="#">CLASSIFICAÇÃO</a>
             <a class="navbar-link" href="#">INFORMAÇÕES PESSOAIS</a>
             <a class="navbar-link" href="#">CONTATO</a>
@@ -38,6 +38,7 @@
                 <input type="password" name="senha" placeholder="Senha">
             </div>
             <button class="btn-login">Login</button>
+            <p>Não tem conta? <span><a href="../html/cadastro.html">Faça seu cadastro!</a></span></p>
         </div>
     </div>        
         
