--- a/src/html/editar.html
+++ b/src/html/editar.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/cadastro.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">]
+    <link rel="stylesheet" href="../css/editar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <title>Cadastro</title>
+    <link rel="shortcut icon" href="../imagens/favicon.png" type="image/x-icon">
+    <title>Alteração de Cadastro</title>
 </head>
 <body>
     <nav class="container-nav">
@@ -24,11 +24,11 @@
 
     <div class="main-login">
         <div class="left-login">
-            <h1>Faça cadastro<br>E entre para o time</h1>
+            <h1>ALTERE SEU CADASTRO</h1>
         </div>
         <div class="right-login">
         <div class="card-login"> <!--(CARD)-->
-            <h1>CADASTRO</h1>
+            <h1>ALTERAÇÃO</h1>
             <div class="textfield"> <!--div para englobar a label e o input-->
                 <label for="usuario">Nome Completo</label>
                 <input type="text" name="usuario" placeholder="Nome"><!--div para receber o nome do usuario -->
@@ -42,16 +42,16 @@
                 <input type="text" name="usuario" placeholder="Usuário"><!--div para receber o nome do usuario -->
             </div>
             <div class="textfield">
-                <label for="senha">Senha</label>
+                <label for="senha">Nova senha</label>
                 <input type="password" name="senha" placeholder="Senha">
             </div>
             <div class="textfield">
                 <label for="senha">Confirme sua senha</label>
                 <input type="password" name="senha" placeholder="Senha">
             </div>
-            <button class="btn-login btn">CADASTRAR</button>
-            <p>Já fez seu cadastro? <span><a href="../html/login.html">Agora faça seu login</a></span></p>
+            <button class="btn-login btn">CONFIRMAR</button>
+            <p><span><a href="../html/login.html">Agora faça seu login</a></span></p>
         </div>
-    </div>       
+    </div>    
 </body>
 </html>
