--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,7 +19,7 @@
             <a class="navbar-button" href="#">LOGIN</a>
         </div>
         <div class="navbar-more">
-            <a class="navbar-link" href="#">PAGINA INICIAL</a>
+            <a class="navbar-link" href="index.html">PAGINA INICIAL</a>
             <a class="navbar-link" href="#">CLASSIFICAÇÃO</a>
             <a class="navbar-link" href="#">INFORMAÇÕES PESSOAIS</a>
             <a class="navbar-link" href="#">CONTATO</a>
@@ -30,7 +30,7 @@
         <h1 id="titulo">JOGO DA FORCA</h1>
       </div>
     <div class="container-principal">
-      <a href="#" id="botao-jogar">JOGUE GRÁTIS AGORA</a>
+      <a href="../html/cadastro.html" id="botao-jogar">JOGUE GRÁTIS AGORA</a>
     <div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
