--- a/src/html/play.html
+++ b/src/html/play.html
@@ -22,8 +22,8 @@
         }
         #jogo{
             background-color: white;
-            width: 820px;
-            height: 620px;
+            width: 800px;
+            height: 600px;
         }
     </style>
 </head>
@@ -45,6 +45,7 @@
         </div>
         <div id="container">
             <div id="jogo">
+                <iframe src="/jogo/build/web/" frameborder="0" width="800" height="600" ></iframe>
             </div>
         </div> 
     </main>
