--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -15,35 +15,57 @@
   <body>
     <nav class="container-nav">
         <div class="navbar-play">
-            <a class="navbar-button" href="#">LOGIN</a>
+            <a class="navbar-button" href="/src/html/login.html">LOGIN</a>
         </div>
         <div class="navbar-more">
             <a class="navbar-link" href="/src/html/index.html">PAGINA INICIAL</a>
             <a class="navbar-link" href="#">CLASSIFICAÇÃO</a>
-            <a class="navbar-link" href="#">INFORMAÇÕES PESSOAIS</a>
+            <a class="navbar-link" href="/src/html/info.html">INFORMAÇÕES PESSOAIS</a>
             <a class="navbar-link" href="/src/html/contato.html">CONTATO</a>
         </div>
     </nav>
     <main>
       <div id="sobre-nos">
-        <h1 id="titulo">sobre a AMDY</h1>
-        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima ipsum fugit placeat aperiam odio officiis laudantium nihil a, iusto nam recusandae, molestias explicabo voluptas voluptate ea debitis, maxime incidunt dignissimos.</p>
+        <h2 id="titulo">Sobre a AMDY</h1>
+        <p class="texto">Na <strong>AMDY</strong>, somos apaixonados por criar soluções tecnológicas inovadoras que transformam ideias em realidade. Nossa equipe é composta por desenvolvedores altamente qualificados e comprometidos, especializados em front-end e back-end, trabalhando em harmonia para entregar produtos de excelência.</p>
+        <h2 class="titulo">Nossa Missão</h2>
+        <p class="texto">Nossa missão é desenvolver aplicações intuitivas, eficientes e escaláveis que atendam às necessidades específicas dos nossos clientes, sempre com um foco em qualidade e inovação. Acreditamos que cada projeto é uma oportunidade única de criar algo extraordinário, superando as expectativas e agregando valor aos negócios dos nossos parceiros.</p>
+        <h2 class="titulo">Nossos Valores</h2>
+        <p class="texto"><strong>Inovação:</strong> Estamos sempre buscando novas tecnologias e metodologias para oferecer soluções de ponta.</p>
+        <p class="texto"><strong>Qualidade:</strong> Comprometidos com a excelência, garantimos que cada detalhe do nosso trabalho seja cuidadosamente planejado e executado.</p>
+        <p class="texto"><strong>Colaboração:</strong> Trabalhamos em conjunto, valorizando a troca de conhecimentos e experiências para alcançar os melhores resultados.</p>
+        <p class="texto"><strong>Transparência:</strong> Mantemos uma comunicação clara e aberta com nossos clientes, garantindo que estejam sempre informados sobre o progresso de seus projetos.</p>
+        <h2 class="titulo">Nossa Equipe</h2>
+        <p class="texto">Nosso time é formado por desenvolvedores talentosos que, juntos, combinam habilidades técnicas avançadas com uma paixão por tecnologia. Cada membro da nossa equipe traz uma perspectiva única, contribuindo para a criação de soluções robustas e inovadoras que atendem às necessidades de nossos clientes.</p>
+        <p class="texto" style="margin-bottom: 100px;">Estamos entusiasmados em colaborar com você para transformar suas ideias em realidade através da tecnologia. Conte conosco para levar seu projeto ao próximo nível!</p>
       </div>
       <div>
-        <h2 id="contatos">Contatos</h2>
-        <ul>
+        <h2 id="contatos-titulo">Contatos</h2>
+        <ul id="contatos">
           <li class="desenvolvedores">Alisson Amegle</li>
-          <p>Desenvolvedor Back-end</p>
-          <a href="">Linkedin</a>
+          <p class="dev-texto">Desenvolvedor Back-end</p>
+          <div class="container-links-contatos">
+          <a href="https://www.linkedin.com/in/alisson-amegle-0063aa300/" class="link-linkedin"><img src="/src/imagens/linkedin.png" class="icone-linkedin" alt="icone linkedin">Linkedin</a>
+          <a href="https://github.com/Ameglebm" class="link-linkedin "><img src="/src/imagens/github.png" class="icone-GitHub" alt="icone GitHub">GitHub</a>
+          </div>
           <li class="desenvolvedores">Mateus Duarte</li>
-          <p>Desenvolvedor Front-end</p>
-          <a href="">Linkedin</a>
+          <p class="dev-texto">Desenvolvedor Front-end</p>
+          <div class="container-links-contatos">
+          <a href="https://www.linkedin.com/in/mateus-duarte-a9970926a/" class="link-linkedin"><img src="/src/imagens/linkedin.png" class="icone-linkedin" alt="icone linkedin">Linkedin</a>
+          <a href="https://github.com/mMateusDSouza" class="link-linkedin "><img src="/src/imagens/github.png" class="icone-GitHub" alt="icone GitHub">GitHub</a>
+          </div>
           <li class="desenvolvedores">Davi Oliveira</li>
-          <p>Desenvolvedor Front-end</p>
-          <a href="">Linkedin</a>
+          <p class="dev-texto">Desenvolvedor Front-end</p>
+          <div class="container-links-contatos">
+          <a href="https://www.linkedin.com/in/davi-de-oliveira-rosa-2224aa284/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="link-linkedin"><img src="/src/imagens/linkedin.png" class="icone-linkedin" alt="icone linkedin">Linkedin</a>
+          <a href="https://github.com/Davi0liveiraa" class="link-linkedin "><img src="/src/imagens/github.png" class="icone-GitHub" alt="icone GitHub">GitHub</a>
+          </div>
           <li class="desenvolvedores">Yasmin Kibaltchich</li>
-          <p>Desenvovedora Back-end</p>
-          <a href="">Linkedin</a>
+          <p class="dev-texto">Desenvovedora Back-end</p>
+          <div class="container-links-contatos">
+          <a href="https://www.linkedin.com/in/yasminkibaltchich/" class="link-linkedin"><img src="/src/imagens/linkedin.png" class="icone-linkedin" alt="icone linkedin">Linkedin</a>
+          <a href="https://github.com/Yasmin-Kibaltchich" class="link-linkedin "><img src="/src/imagens/github.png" class="icone-GitHub" alt="icone GitHub">GitHub</a>
+          </div>
         </ul>
       </div>
     </main>
